# mindhive

./: .gitignore  README.md  package-lock.json
frontend/: .eslintrc.json  .gitignore  config.js  i18n.json  next.config.js  package-lock.json  package.json  server.js
frontend/components/: ErrorMessage.js  LanguageSelector.js  User.js
frontend/lib/: classNetworkRef.js  classTemplateBoards.js  cloudinaryMediaUpload.js  curriculumTypes.js  dataJournalDatasources.js  dataJournalTimestamps.js  feedbackCenterTabs.js  joinClassNetwork.js  localeToBcp47.js  maplibreGlPlotlyCssNoop.js  milestoneStatus.js  milestones.js  normalizeVariableName.js  opportunityClassNetworks.js  profileEditNavigation.js  profileStudyImageUrls.js  proposalBoardSettings.js  sponsorOnboardingDismiss.js  taskTypeColors.js  templateBoardActionCards.js  useBoardMilestones.js  useClassNetworkByRef.js  useDocumentationLanguage.js  useEmail.js  useForm.js  useUnsavedChangesGuard.js  withData.js
frontend/pages/: _app.js  _document.js  index.js  teachers.js
frontend/scripts/: copy-monaco-assets.cjs
keystone/: .env  .gitignore  README.md  access.ts  auth.ts  collab-server.js  ecosystem.collab.config.js  env  keystone.ts  package-lock.json  package.json  schema.graphql  schema.prisma  schema.ts  types.ts
keystone/.keystone/: config.js  config.js.map
keystone/docs/: PROPOSAL_BOARD_PROPAGATION_AUDIT.md  PROPOSAL_BOARD_PROPAGATION_RULES.md  (+1 more)
keystone/lib/: mail.ts  (+6 more)
pydantic/: .gitignore  README.md  pyproject.toml
pydantic/src/agent_service/: __init__.py  feedback.py  keystone.py  main.py  models.py
(+1860 files in other folders)
