[project]
name = "mindhive-ai-feedback-service"
version = "0.1.0"
description = "Barebones Pydantic service for MindHive AI feedback help."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uvicorn]
factory = false
